# Algorithms-And-Data-Structures

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  run.sh  run_tests.sh
.github/workflows/: all-tests.yml
Backtrack/: Minimax.py
Containers/: .travis.yml  CMakeLists.txt
Containers/queue/src/: queue.cpp
Containers/queue/test/: CMakeLists.txt  test_queue.cpp
Containers/stack/: CMakeLists.txt  stack.cpp  stack.h
Containers/stack/src/: CMakeLists.txt  stack.cpp
Containers/stack/test/: test_stack.cpp
Containers/tests/: CMakeLists.txt  test_stack.cpp
Containers/vector/src/: CMakeLists.txt  vector.cpp  vector.h
Containers/vector/test/: test_vector.cpp
Graphs/: A*.py  min_span_tree.py
LeetCode/30-Day-Challange/src/:  Contiguous Array.py   Diameter of Binary Tree.py  Backspace String Compare.py  Best Time to Buy and Sell Stock II.py  Counting Elements.py  Group Anagrams.py  Happy Number.py  Last Stone Weight.py  Maximum Subarray.py  Middle of the Linked List.py  Min Stack.py  Move Zeroes.py  (+2 more)
UnitTest/: main.py
XUnit/: main.py
notes/: backtracking.md  basic_concepts.md  brain_teasers.md  collections_and_containers.md  data_structures.md  dynamic_programming.md  graphs.md  greedy_algorithms.md  math_set_relationship.md  matrices.md  recursive_problems.md  searching.md  sorting.md
resources/: data_structures_advanced.mmd  data_strucutres.mmd  time_complexity.py
src/: basic_concepts.md
src/Graphs/: Dijkstra.py  Graph_From_Links.py
src/backtracking/: README.md
src/collections/: README.md
src/collections and containers/: README.md
src/collections/cpp/: CMakeLists.txt
src/collections/cpp/heap/: CMakeLists.txt
src/collections/cpp/heap/src/: heap.cpp  heap.h
src/collections/cpp/queue/src/: CMakeLists.txt
src/collections/cpp/stack/: CMakeLists.txt
src/collections/cpp/stack/src/: stack.cpp
src/collections/cpp/stack/test/: CMakeLists.txt  test_stack.cpp
src/collections/cpp/vector/: CMakeLists.txt
src/collections_and_containers/: README.md
src/dynamic programming/: README.md
src/dynamic_programming/: README.md
src/dynamic_programming/cpp/climb_stairs/: CMakeLists.txt
src/dynamic_programming/cpp/climb_stairs/src/: CMakeLists.txt  climb.cpp  climb.h
src/dynamic_programming/cpp/climb_stairs/test/: CMakeLists.txt  test_climb.cpp
src/dynamic_programming/cpp/longest_common_subsequence/src/: CMakeLists.txt  longest_common_subsequence.cpp  longest_common_subsequence.h
src/dynamic_programming/cpp/longest_increasing_subarray/src/: CMakeLists.txt  longest_increasing_subarray.h
src/dynamic_programming/cpp/minimum_insertions_for_palindrome/src/: CMakeLists.txt  minimum_insertions_for_palindrome.cpp  minimum_insertions_for_palindrome.h
src/graphs/: README.md
src/sorting/: README.md
(+769 files in other folders)
